--- a/Endpoints/Api/appsettings.Development.json
+++ b/Endpoints/Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PardisTousAcademy_Dev;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=PardisAcademy;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "JwtSettings": {
     "Key": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
@@ -13,6 +13,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+    }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Information",
+        "System": "Warning",
+        "Pardis.Application": "Debug"
+      }
     }
   }
 }
